Bugfix: couldn't deal with a modal in Firefox on mobiles

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -372,6 +372,7 @@ button {
     width: 100%;
     height: 100%;
     font-size: 0.6rem;
+    z-index: 1;
 }
 
 .modal-add-form, .preview-container {
